Some better test config. for large benchmarks